bugfix: navbar transition on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -116,3 +116,9 @@ button.btn-default:hover{
   border-radius: 10px;
   box-shadow: 3px 5px 15px rgba(0, 0, 0, 0.25);
 }
+.transition {
+  padding: 15px;
+  background: white;
+  z-index: 100;
+  border-radius: 10px;
+}
